# steppy

./: meson.build  meson_post_install.sh
data/: io.furios.Steppy.desktop  io.furios.Steppy.gschema.xml
debian/: control
steppy/: db.c  db.h  main.c  sensors.c  sensors.h  steppy.h  utils.c  utils.h
steppy/ui/widgets/: progress.c  progress.h
